--- a/webpacksty/package.json
+++ b/webpacksty/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "rimraf ./dist/* && webpack --config webpack.config.js --progress",
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
     "start": "react-scripts start"
   },
@@ -30,6 +30,7 @@
     "less": "^3.10.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "rimraf": "^3.0.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
