--- a/webpacksty/package.json
+++ b/webpacksty/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf ./dist/* && webpack --config webpack.config.js --progress",
+    "build": "rimraf ./dist/* && webpack --config ./build/webpack.config.base.js --progress",
     "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build",
-    "start": "react-scripts start"
+    "start": "serve dist"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -18,6 +18,7 @@
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "serve": "^11.2.0",
     "style-loader": "^1.0.0"
   },
   "devDependencies": {
@@ -27,13 +28,16 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "eslint-loader": "^3.0.2",
     "less": "^3.10.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "rimraf": "^3.0.0",
+    "serve": "^11.2.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "webpack-require-http": "^0.4.3"
   },
   "browserslist": {
     "production": [
