--- a/webpacksty/package.json
+++ b/webpacksty/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
+    "antd-mobile": "^2.3.1",
+    "axios": "^0.19.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-fastclick": "^3.0.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "serve": "^11.2.0",
