--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
 
 
         <welcome-file>index.action</welcome-file>
@@ -37,9 +37,13 @@
         <servlet-class>server.UploadServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    <servlet-name>UploadServlet</servlet-name>
-    <url-pattern>*.do</url-pattern>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/UploadServlet</url-pattern>
     </servlet-mapping>
+<!--    <servlet-mapping>-->
+<!--    <servlet-name>UploadServlet</servlet-name>-->
+<!--    <url-pattern>*.do</url-pattern>-->
+<!--    </servlet-mapping>-->
 </web-app>
 
 
